--- a/b/belzec/index.html
+++ b/b/belzec/index.html
@@ -96,7 +96,7 @@
 				In a deposition of 7 October 1944, Rozalja Schelewna Schier declared to know from hearsay that at Belzec people were killed with <q>gas and high-voltage electric current,</q> after which the floor folded down, and the corpses fell into a pit, where they were burned.
 			</p>
 			<p>
-				On 26 April 1945, a deranged <a href="/witnesses/perpetrator/gerstein-kurt/index.html">Kurt Gerstein</a> signed one of his many affidavits in which he claimed that mass murder at Belzec was committed with <a href="/tool/diesel-exhaust/index.html">Diesel-engine exhaust gasses</a>, although these gases are so low in <a href="/tool/carbon-monoxide/index.html">carbon monoxide</a> that they are unsuited for mass-murder purposes.
+				On 26 April 1945, a deranged <a href="/witnesses/perpetrator/gerstein-kurt/index.html">Kurt Gerstein</a> signed one of his many affidavits in which he claimed that mass murder at Belzec was committed with <a href="/d/diesel-exhaust/index.html">Diesel-engine exhaust gasses</a>, although these gases are so low in <a href="/c/carbon-monoxide/index.html">carbon monoxide</a> that they are unsuited for mass-murder purposes.
 			</p>
 			<p>
 				On 16 October 1945, a certain Jan G. declared to know from hearsay that the electrocution story was wrong. Rumors had it that the killing had been done with the exhaust gas of a 250-HP engine running in the camp. The witness confirmed the collapsible-floor rumor, although now to discharge the corpses into rail cars, bringing them to mass graves. On the same day, another hearsay witness, Michał Kuśmierczak, also peddled the 250-HP motor version.
