--- a/b/index.html
+++ b/b/index.html
@@ -79,7 +79,7 @@
 					<li><a href="/witnesses/victim/buki-milton/index.html">Buki, Milton</a></li>
 					<li><a href="/locations/country/bulgaria/index.html">Bulgaria</a></li>
 					<li><a href="/legal/company/buna/index.html">BUNA</a></li>
-					<li><a href="/concept/bunkers/index.html">Bunkers</a></li>
+					<li><a href="/categories/concept/bunkers/index.html">Bunkers</a></li>
 					<li><a href="/b/bunkers/index.html">Bunkers</a></li>
 					<li><a href="/witnesses/perpetrator/burmeister-walter/index.html">Burmeister, Walter</a></li>
 				</ul>
