--- a/e/exotic-murder-weapons/index.html
+++ b/e/exotic-murder-weapons/index.html
@@ -26,7 +26,7 @@
 				Many of the commonly claimed murder methods allegedly used during the Holocaust, are exotic in nature by objective standards, but due to incessant exposure to tales about them, we have become calloused as to their peculiar nature, and have accepted them as <q>normal.</q> This includes <a href="/h/homicidal-gas-chambers/index.html">homicidal gas chambers</a> as well as <a href="/g/gas-vans/index.html">gas vans</a>, which both have their own entry.
 			</p>
 			<p>
-				In the present context, <q>exotic</q> refers to murder methods that have been claimed by one or more sources, but which are rejected by the orthodoxy as false rumors or propaganda lies. The entry on <a href="/t/tools-of-mass-murder/index.html#Murder">Tools of Mass Murder</a>, Point 4 of its section on <q>Murder Weapons,</q> contains a list of such methods. See also the entry on <a href="/absurd-claims/index.html">Absurd Claims</a>.
+				In the present context, <q>exotic</q> refers to murder methods that have been claimed by one or more sources, but which are rejected by the orthodoxy as false rumors or propaganda lies. The entry on <a href="/t/tools-of-mass-murder/index.html#Murder">Tools of Mass Murder</a>, Point 4 of its section on <q>Murder Weapons,</q> contains a list of such methods. See also the entry on <a href="/a/absurd-claims/index.html">Absurd Claims</a>.
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
