--- a/e/extermination-camps/index.html
+++ b/e/extermination-camps/index.html
@@ -52,384 +52,150 @@
 						<th>alleged Murder Weapon(s)</th>
 					</tr>
 				</thead>
-<tbody>
+				<tbody>
 					<tr>
 						<td><a href="/a/auschwitz/index.html">Auschwitz</a></td>
-						<td>
-
-							mixed/main
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chambers</a>
-												</td>
+						<td> mixed/main </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> </td>
 					</tr>
 					<tr>
 						<td><a href="/b/belzec/index.html">Belzec</a></td>
-						<td>
-
-							pure
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chambers</a>
-												</td>
+						<td> pure </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/other-camp/bergen-belsen/index.html" target="_top" rel="noopener">Bergen-Belsen</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chambers</a>
-												</td>
+						<td> <a href="/other-camp/bergen-belsen/index.html">Bergen-Belsen</a> </td>
+						<td> phantom </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/b/buchenwald/index.html" target="_top" rel="noopener">Buchenwald</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/b/buchenwald/index.html">Buchenwald</a> </td>
+						<td> phantom </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/c/chelmno/index.html" target="_top" rel="noopener">Chełmno</a>
-												</td>
-						<td>
-
-							pure
-												</td>
-						<td>
-
-							<a href="/tool/gas-vans/index.html" target="_top" rel="noopener">gas vans</a>
-												</td>
+						<td> <a href="/c/chelmno/index.html">Chełmno</a> </td>
+						<td> pure </td>
+						<td> <a href="/tool/gas-vans/index.html">gas vans</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/mixed-purpose-camp/dachau/index.html" target="_top" rel="noopener">Dachau</a>
-												</td>
-						<td>
-
-							mixed/auxiliary
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/mixed-purpose-camp/dachau/index.html">Dachau</a> </td>
+						<td> mixed/auxiliary </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/f/flossenburg/index.html" target="_top" rel="noopener">Flossenbürg</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/f/flossenburg/index.html">Flossenbürg</a> </td>
+						<td> phantom </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
 						<td><a href="/phantom-camp/gross-rosen/index.html">Gross-Rosen</a></td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> phantom </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/other-camp/gusen/index.html" target="_top" rel="noopener">Gusen</a>
-												</td>
-						<td>
-
-							mixed/auxiliary
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/other-camp/gusen/index.html">Gusen</a> </td>
+						<td> mixed/auxiliary </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/k/kosow-podlaski/index.html" target="_top" rel="noopener">Kosów Podlaski</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/k/kosow-podlaski/index.html">Kosów Podlaski</a> </td>
+						<td> phantom </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/l/lviv/index.html" target="_top" rel="noopener">Lviv</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/l/lviv/index.html">Lviv</a> </td>
+						<td> phantom </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/majdanek/index.html" target="_top" rel="noopener">Majdanek</a>
-												</td>
-						<td>
-
-							mixed/auxiliary*
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chambers</a>, executions
-												</td>
+						<td> <a href="/majdanek/index.html">Majdanek</a> </td>
+						<td> mixed/auxiliary* </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a>, executions </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/maly-trostenets/index.html" target="_top" rel="noopener">Maly Trostenets</a>
-												</td>
-						<td>
-
-							pure
-												</td>
-						<td>
-
-							executions
-												</td>
+						<td> <a href="/m/maly-trostenets/index.html">Maly Trostenets</a> </td>
+						<td> pure </td>
+						<td> executions </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/mauthausen/index.html" target="_top" rel="noopener">Mauthausen</a>
-												</td>
-						<td>
-
-							mixed/auxiliary
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/mauthausen/index.html">Mauthausen</a> </td>
+						<td> mixed/auxiliary </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/m/mogilev/index.html" target="_top" rel="noopener">Mogilev</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>, executions
-												</td>
+						<td> <a href="/m/mogilev/index.html">Mogilev</a> </td>
+						<td> phantom </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a>, executions </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/natzweiler/index.html" target="_top" rel="noopener">Natzweiler</a>
-												</td>
-						<td>
-
-							mixed/auxiliary
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/natzweiler/index.html">Natzweiler</a> </td>
+						<td> mixed/auxiliary </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/neuengamme/index.html" target="_top" rel="noopener">Neuengamme</a>
-												</td>
-						<td>
-
-							mixed/auxiliary
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chambers</a>
-												</td>
+						<td> <a href="/neuengamme/index.html">Neuengamme</a> </td>
+						<td> mixed/auxiliary </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/phantom-camp/nordhausen/index.html" target="_top" rel="noopener">Nordhausen</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							massacres
-												</td>
+						<td> <a href="/phantom-camp/nordhausen/index.html">Nordhausen</a> </td>
+						<td> phantom </td>
+						<td> massacres </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/p/pinsk/index.html" target="_top" rel="noopener">Pinsk</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/p/pinsk/index.html">Pinsk</a> </td>
+						<td> phantom </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/mixed-purpose-camp/ravensbruck/index.html" target="_top" rel="noopener">Ravensbrück</a>
-												</td>
-						<td>
-
-							mixed/auxiliary
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/mixed-purpose-camp/ravensbruck/index.html">Ravensbrück</a> </td>
+						<td> mixed/auxiliary </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/mixed-purpose-camp/sachsenhausen/index.html" target="_top" rel="noopener">Sachsenhausen</a>
-												</td>
-						<td>
-
-							mixed/auxiliary
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/mixed-purpose-camp/sachsenhausen/index.html">Sachsenhausen</a> </td>
+						<td> mixed/auxiliary </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/locations/camps/semlin/index.html" target="_top" rel="noopener">Semlin</a>
-												</td>
-						<td>
-
-							mixed/main
-												</td>
-						<td>
-
-							<a href="/tool/gas-vans/index.html">gas vans</a>
-												</td>
+						<td> <a href="/locations/camps/semlin/index.html">Semlin</a> </td>
+						<td> mixed/main </td>
+						<td> <a href="/tool/gas-vans/index.html">gas vans</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/locations/camps/sobibor/index.html" target="_top" rel="noopener">Sobibór</a>
-												</td>
-						<td>
-
-							pure
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chambers</a>
-												</td>
+						<td> <a href="/locations/camps/sobibor/index.html">Sobibór</a> </td>
+						<td> pure </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/locations/camps/stutthof/index.html" target="_top" rel="noopener">Stutthof</a>
-												</td>
-						<td>
-
-							mixed/auxiliary
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/locations/camps/stutthof/index.html">Stutthof</a> </td>
+						<td> mixed/auxiliary </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/t/trawniki/index.html" target="_top" rel="noopener">Trawniki</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a>
-												</td>
+						<td> <a href="/t/trawniki/index.html">Trawniki</a> </td>
+						<td> phantom </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chamber</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/t/treblinka/index.html" target="_top" rel="noopener">Treblinka</a>
-												</td>
-						<td>
-
-							pure
-												</td>
-						<td>
-
-							<a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chambers</a>
-												</td>
+						<td> <a href="/t/treblinka/index.html">Treblinka</a> </td>
+						<td> pure </td>
+						<td> <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/phantom-camp/wolzek/index.html" target="_top" rel="noopener">Wolzek</a>
-												</td>
-						<td>
-
-							phantom
-												</td>
-						<td>
-
-							<u><a href="/h/homicidal-gas-chambers/index.html" target="_top" rel="noopener">gas chamber</a></u>
-												</td>
+						<td> <a href="/phantom-camp/wolzek/index.html">Wolzek</a> </td>
+						<td> phantom </td>
+						<td> <u><a href="/h/homicidal-gas-chambers/index.html">gas chamber</a></u> </td>
 					</tr>
-</tbody>
-<tfoot>
-					<tr>
-						<td colspan="3">* Until 2005, mass murder in gas chambers was supposedly the camp&rsquo;s main purpose, but then the museum switched to exterminations mainly by executions and only rarely by gassings, and merely as the camp&rsquo;s auxiliary purpose.</td>
-					</tr>
+				</tbody>
+				<tfoot>
+				<tr>
+					<td colspan="3">* Until 2005, mass murder in gas chambers was supposedly the camp&rsquo;s main purpose, but then the museum switched to exterminations mainly by executions and only rarely by gassings, and merely as the camp&rsquo;s auxiliary purpose.</td>
+				</tr>
 				</tfoot>
 			</table>
-			<!-- #bbinclude "footer.incl" -->
+<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
