--- a/g/index.html
+++ b/g/index.html
@@ -30,7 +30,7 @@
 					<li><a href="/technologies/gastight-doors/index.html">Gastight Doors</a></li>
 					<li><a href="/legal/company/gaubschat-company/index.html">Gaubschat Company</a></li>
 					<li><a href="/categories/concepts/generalplan-ost/index.html">Generalplan Ost</a></li>
-					<li><a href="/concept/genocide/index.html">Genocide</a></li>
+					<li><a href="/categories/concept/genocide/index.html">Genocide</a></li>
 					<li><a href="/categories/concepts/genocide/index.html">Genocide</a></li>
 					<li><a href="/locations/country/germany/index.html">Germany</a></li>
 					<li><a href="/witnesses/perpetrator/gerstein-kurt/index.html">Gerstein, Kurt</a></li>
