--- a/h/holocaust-indoctrination/index.html
+++ b/h/holocaust-indoctrination/index.html
@@ -77,7 +77,7 @@
 				(One small problem: There were no <a href="/h/homicidal-gas-chambers/index.html">gas chambers</a> at <a href="/a/auschwitz/index.html">Auschwitz</a>&hellip;)
 			</p>
 			<p>
-				(For more details, see the entry on <a href="/censorship/index.html">censorship</a>, as well as <a href="/bibliography/index.html#Dalton2020">Dalton 2020</a>, pp. 279-286.)
+				(For more details, see the entry on <a href="/c/censorship/index.html">censorship</a>, as well as <a href="/bibliography/index.html#Dalton2020">Dalton 2020</a>, pp. 279-286.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
