--- a/witnesses/false-witness/false-witnesses/index.html
+++ b/witnesses/false-witness/false-witnesses/index.html
@@ -35,7 +35,7 @@
 				Here is a certainly incomplete list of acknowledged cases of false witnesses:
 			</p>
 			<ul>
-				<li><a href="/avey-denis/index.html">Denis Avey</a></li>
+				<li><a href="/a/avey-denis/index.html">Denis Avey</a></li>
 				<li><a href="/corry-joe/index.html">Joe Corry</a></li>
 				<li><a href="/doessekker-bruno/index.html">Bruno Doessekker</a> (aka Binjamin Wilkomirski)</li>
 				<li><a href="/gray-martin/index.html">Martin Gray</a> (aka Mieczyslaw Grajewski)</li>
