--- a/c/carbon-monoxide/index.html
+++ b/c/carbon-monoxide/index.html
@@ -2,19 +2,41 @@
 <html lang="en-US">
 <head>
 <!-- #bbinclude "metatags.incl" -->
-<meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiography-project.com/c/carbon-monoxide/index.html" rel="canonical">
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen">
+	<link href="https://encyclopedia.historiography-project.com/c/carbon-monoxide/index.html" rel="canonical">
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
+</script>
 <!-- end bbinclude -->
 	<title>Carbon Monoxide | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
-<header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9">
+<header class="header">
+	<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project"></a>
+</header>
+<main class="container-fluid">
+	<div class="row">
+		<article class="col-md-9">
 <!-- end bbinclude -->
 <!-- #bbinclude "header.incl" -->
-<h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
+			<h1>
+				Holocaust Encyclopedia
+			</h1>
+			<p class="lead">
+				uncensored and unconstrained
+			</p>
+			<div id="masthead">
+			</div>
+			<script src="/_assets/js/masthead-min.js">
+</script>
+			<nav id="breadcrumbs">
+			</nav>
+			<script src="/_assets/js/nav-hhp-min.js">
+</script>
 <!-- end bbinclude -->
 			<h2>
 				Carbon Monoxide
@@ -48,66 +70,32 @@
 							<i>Physiological Effects</i>
 						</p>
 						</th>
-					</tr></thead><tbody>
+					</tr>
+				</thead>
+				<tbody>
 					<tr>
-						<td>
-
-							<i>(0.01)</i>
-												</td>
-						<td>
-
-							<i>Permissible concentration for an exposure of several hours</i>
-												</td>
+						<td> <i>(0.01)</i> </td>
+						<td> <i>Permissible concentration for an exposure of several hours</i> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<i>(0.04 &mdash; 0.05)</i>
-												</td>
-						<td>
-
-							<i>Inhalation for up to 1 hour without appreciable effect</i>
-												</td>
+						<td> <i>(0.04 &mdash; 0.05)</i> </td>
+						<td> <i>Inhalation for up to 1 hour without appreciable effect</i> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<i>(0.06 &mdash; 0.07)</i>
-												</td>
-						<td>
-
-							<i>Appreciable effect after exposure of 1 hour</i>
-												</td>
+						<td> <i>(0.06 &mdash; 0.07)</i> </td>
+						<td> <i>Appreciable effect after exposure of 1 hour</i> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<i>(0.10 &mdash; 0.12)</i>
-												</td>
-						<td>
-
-							<i>Indisposition but no dangerous effects after exposure of 1 hour</i>
-												</td>
+						<td> <i>(0.10 &mdash; 0.12)</i> </td>
+						<td> <i>Indisposition but no dangerous effects after exposure of 1 hour</i> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<i>(0.15 &mdash; 0.2)</i>
-												</td>
-						<td>
-
-							<i>Dangerous concentrations for exposure of 1 hour</i>
-												</td>
+						<td> <i>(0.15 &mdash; 0.2)</i> </td>
+						<td> <i>Dangerous concentrations for exposure of 1 hour</i> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<i>(0.4 and more)</i>
-												</td>
-						<td>
-
-							<i>Fatal in exposure of less than 1 hour</i>
-												</td>
+						<td> <i>(0.4 and more)</i> </td>
+						<td> <i>Fatal in exposure of less than 1 hour</i> </td>
 					</tr>
 				</tbody>
 			</table>
@@ -123,70 +111,38 @@
 					<tr>
 						<th>CO Source</th>
 						<th>Device/Location</th>
-					</tr></thead><tbody>
+					</tr>
+				</thead>
+				<tbody>
 					<tr>
-						<td>
-
-							gasoline-engine exhaust, bottled CO
-												</td>
-						<td>
-
-							<a href="/gas-vans/index.html">gas vans</a>, <a href="/c/chelmno/index.html">Chełmno Camp</a>
-												</td>
+						<td> gasoline-engine exhaust, bottled CO </td>
+						<td> <a href="/g/gas-vans/index.html">gas vans</a>, <a href="/c/chelmno/index.html">Chełmno Camp</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/diesel-exhaust/index.html">diesel-engine exhaust</a>
-												</td>
-						<td>
-
-							gas vans, <a href="/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>
-												</td>
+						<td> <a href="/d/diesel-exhaust/index.html">diesel-engine exhaust</a> </td>
+						<td> gas vans, <a href="/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							bottled CO*
-												</td>
-						<td>
-
-							<a href="/camp/majdanek/index.html">Majdanek Camp</a>
-												</td>
+						<td> bottled CO* </td>
+						<td> <a href="/camp/majdanek/index.html">Majdanek Camp</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							Diesel-engine exhaust
-												</td>
-						<td>
-
-							<a href="/b/belzec/index.html">Bełżec Camp</a>
-												</td>
+						<td> Diesel-engine exhaust </td>
+						<td> <a href="/b/belzec/index.html">Bełżec Camp</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							(gasoline-)engine exhaust
-												</td>
-						<td>
-
-							<a href="/locations/camps/sobibor/index.html">Sobibór Camp</a>
-												</td>
+						<td> (gasoline-)engine exhaust </td>
+						<td> <a href="/locations/camps/sobibor/index.html">Sobibór Camp</a> </td>
 					</tr>
 					<tr>
-						<td>
-
-							Diesel-engine exhaust
-												</td>
-						<td>
-
-							<a href="/t/treblinka/index.html">Treblinka Camp</a>
-												</td>
-					</tr></tbody><tfoot>
-					<tr>
-						<td colspan="2"><i>* The steel bottles found at Majdanek contained carbon <u><b>di</b></u>oxide, which is not toxic! </i></td>
+						<td> Diesel-engine exhaust </td>
+						<td> <a href="/t/treblinka/index.html">Treblinka Camp</a> </td>
 					</tr>
+				</tbody>
+				<tfoot>
+				<tr>
+					<td colspan="2"><i>* The steel bottles found at Majdanek contained carbon <u><b>di</b></u>oxide, which is not toxic! </i></td>
+				</tr>
 				</tfoot>
 			</table>
 			<p>
@@ -204,112 +160,40 @@
 				</tbody>
 				<tbody>
 					<tr>
-						<td>
-
-							bottled CO
-												</td>
-						<td>
-
-							Commercially available, high price, easy to transport.
-												</td>
-						<td>
-
-							100%
-												</td>
-						<td>
-
-							extremely high
-												</td>
+						<td> bottled CO </td>
+						<td> Commercially available, high price, easy to transport. </td>
+						<td> 100% </td>
+						<td> extremely high </td>
 					</tr>
 					<tr>
-						<td>
-
-							process gas
-												</td>
-						<td>
-
-							In large quantities available only near coal-liquefaction plants, such as at Auschwitz-<a href="/camp/monowitz/index.html" target="_top" rel="noopener">Monowitz</a>; requires gas-pipe hook-up.
-												</td>
-						<td>
-
-							30-100%
-												</td>
-						<td>
-
-							extremely to very high
-												</td>
+						<td> process gas </td>
+						<td> In large quantities available only near coal-liquefaction plants, such as at Auschwitz-<a href="/camp/monowitz/index.html">Monowitz</a>; requires gas-pipe hook-up. </td>
+						<td> 30-100% </td>
+						<td> extremely to very high </td>
 					</tr>
 					<tr>
-						<td>
-
-							city gas
-												</td>
-						<td>
-
-							Readily available in larger cities with coke processing; cheap, abundant, and with access to a large-scale infrastructure for adding and maintaining pipe networks.
-												</td>
-						<td>
-
-							±30%
-												</td>
-						<td>
-
-							very high
-												</td>
+						<td> city gas </td>
+						<td> Readily available in larger cities with coke processing; cheap, abundant, and with access to a large-scale infrastructure for adding and maintaining pipe networks. </td>
+						<td> ±30% </td>
+						<td> very high </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/technologies/producer-gas/index.html" target="_top" rel="noopener">producer gas</a>
-												</td>
-						<td>
-
-							From cheap fuel abundantly available (coke, coal, wood), generated in affordable producer-gas generator mounted mostly on commercial vehicles (vans, trucks, buses) and manufactured by the tens of thousands.
-												</td>
-						<td>
-
-							15-30%
-												</td>
-						<td>
-
-							very high
-												</td>
+						<td> <a href="/technologies/producer-gas/index.html">producer gas</a> </td>
+						<td> From cheap fuel abundantly available (coke, coal, wood), generated in affordable producer-gas generator mounted mostly on commercial vehicles (vans, trucks, buses) and manufactured by the tens of thousands. </td>
+						<td> 15-30% </td>
+						<td> very high </td>
 					</tr>
 					<tr>
-						<td>
-
-							gasoline-engine exhaust
-												</td>
-						<td>
-
-							Readily available by the millions, although with fuel shortage.
-												</td>
-						<td>
-
-							1-7%
-												</td>
-						<td>
-
-							high
-												</td>
+						<td> gasoline-engine exhaust </td>
+						<td> Readily available by the millions, although with fuel shortage. </td>
+						<td> 1-7% </td>
+						<td> high </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/diesel-exhaust/index.html" target="_top" rel="noopener">diesel-engine exhaust</a>
-												</td>
-						<td>
-
-							Readily available by the hundreds of thousands, although with fuel shortage.
-												</td>
-						<td>
-
-							0.0 to 0.4%
-												</td>
-						<td>
-
-							Non-lethal within an hour under stationary conditions
-												</td>
+						<td> <a href="/d/diesel-exhaust/index.html">diesel-engine exhaust</a> </td>
+						<td> Readily available by the hundreds of thousands, although with fuel shortage. </td>
+						<td> 0.0 to 0.4% </td>
+						<td> Non-lethal within an hour under stationary conditions </td>
 					</tr>
 				</tbody>
 			</table>
@@ -324,12 +208,28 @@
 			<p>
 				A suicide inside a gasoline car carried out in the 1970s in the U.S. by a healthy 36-year-old man, who recorded his breathing noises, showed that it takes some 20 minutes for a healthy person to die in such a scenario. This gives a rough idea of the time required to kill with gasoline-engine exhaust gases piped into the interior of a vehicle. (See <a href="/bibliography/index.html#Rudolf2023">Rudolf 2023</a>, pp. 265f.; <a href="/bibliography/index.html#Mattogno_Kues">Mattogno/Kues/Graf 2015</a>, pp. 856-868.)
 			</p>
-			<!-- #bbinclude "footer.incl" -->
-</article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-
-<script src="/_assets/bootstrap3_player/bootstrap3_player.js"></script>
-
+<!-- #bbinclude "footer.incl" -->
+		</article>
+		<div class="col-md-3">
+			<nav class="navigation" id="nav-hhp">
+			</nav>
+			<hr>
+			<aside id="aside">
+			</aside>
+			<script src="/_assets/js/aside-min.js">
+</script>
+		</div>
+	</div>
+</main>
+<footer class="footer" id="footer">
+	<p class="text-center">
+		Copyright &copy; 2022-2024 Academic Research Group
+	</p>
+</footer>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
+</script>
+<script src="/_assets/bootstrap3_player/bootstrap3_player.js">
+</script>
 <!-- end bbinclude -->
 </body>
 </html>
