--- a/h/homicidal-gas-chambers/index.html
+++ b/h/homicidal-gas-chambers/index.html
@@ -62,13 +62,13 @@
 				<a id="Chelmno" href="/c/chelmno/index.html">Chełmno</a>
 			</h5>
 			<p>
-				Here, mobile gas chambers, so-called <a href="/gas-vans/index.html">gas vans</a>, are said to have been deployed since late 1941, after the method had been discovered unintentionally by <a href="/persons/politician/nebe-arthur/index.html">Arthur Nebe</a> when he almost gassed himself in his car by accident. The vans&rsquo; engine exhaust was ducted into the cargo hold, which was filled with up to a hundred or more victims.
+				Here, mobile gas chambers, so-called <a href="/g/gas-vans/index.html">gas vans</a>, are said to have been deployed since late 1941, after the method had been discovered unintentionally by <a href="/persons/politician/nebe-arthur/index.html">Arthur Nebe</a> when he almost gassed himself in his car by accident. The vans&rsquo; engine exhaust was ducted into the cargo hold, which was filled with up to a hundred or more victims.
 			</p>
 			<h5>
 				<a id="Belzec" href="/b/belzec/index.html">Belzec</a>, <a href="/locations/camps/sobibor/index.html">Sobibór</a>, <a href="/t/treblinka/index.html">Treblinka</a>
 			</h5>
 			<p>
-				When the <q><a href="/categories/concepts/final-solution/index.html">Final Solution</a></q> of the Jewish question was implemented with the creation of these three <q><a href="/camp/extermination-camps/index.html">pure extermination camps</a></q> &mdash; allegedly starting in October of 1941 &mdash; predominantly SS men who previously served at various <a href="/e/euthanasia/index.html">euthanasia</a> institutions were deployed to these three camps. Yet, instead of applying the methods used at those institutions (bottled carbon monoxide), they are said to have used completely different murder methods. For <a href="/b/belzec/index.html">Belzec</a> were claimed: unslaked lime, high-voltage electricity, vacuum and <a href="/diesel-exhaust/index.html">diesel-engine exhaust gas</a>. For <a href="/locations/camps/sobibor/index.html">Sobibór</a> were claimed: chlorine gas, engine-exhaust gas, high-voltage electricity or a black liquid. For <a href="/t/treblinka/index.html">Treblinka</a> were claimed: unslaked lime, hot steam, high-voltage electricity and <a href="/diesel-exhaust/index.html">diesel-engine exhaust gas</a>. Today, only engine exhaust is claimed for all three camps.
+				When the <q><a href="/categories/concepts/final-solution/index.html">Final Solution</a></q> of the Jewish question was implemented with the creation of these three <q><a href="/camp/extermination-camps/index.html">pure extermination camps</a></q> &mdash; allegedly starting in October of 1941 &mdash; predominantly SS men who previously served at various <a href="/e/euthanasia/index.html">euthanasia</a> institutions were deployed to these three camps. Yet, instead of applying the methods used at those institutions (bottled carbon monoxide), they are said to have used completely different murder methods. For <a href="/b/belzec/index.html">Belzec</a> were claimed: unslaked lime, high-voltage electricity, vacuum and <a href="/d/diesel-exhaust/index.html">diesel-engine exhaust gas</a>. For <a href="/locations/camps/sobibor/index.html">Sobibór</a> were claimed: chlorine gas, engine-exhaust gas, high-voltage electricity or a black liquid. For <a href="/t/treblinka/index.html">Treblinka</a> were claimed: unslaked lime, hot steam, high-voltage electricity and <a href="/d/diesel-exhaust/index.html">diesel-engine exhaust gas</a>. Today, only engine exhaust is claimed for all three camps.
 			</p>
 			<h5>
 				<a id="Mauthausen" href="/camp/mauthausen/index.html">Mauthausen</a>
@@ -80,7 +80,7 @@
 				<a id="Majdanek" href="/camp/majdanek/index.html">Majdanek</a>
 			</h5>
 			<p>
-				Although the Majdanek Camp &mdash; like Belzec, Sobibór and Treblinka &mdash; was also part of <a href="/a/aktion-reinhardt/index.html"><i>Aktion Reinhardt</i></a>, the decision to have gas chambers built there was taken only sometime in early 1942, and the methods used were allegedly both <a href="/toxins-chemicals/zyklon-b/index.html">Zyklon B</a> and bottled <a href="/carbon-monoxide/index.html">carbon monoxide</a>. There were no exotic methods claimed, such as those at the other Reinhardt camps.
+				Although the Majdanek Camp &mdash; like Belzec, Sobibór and Treblinka &mdash; was also part of <a href="/a/aktion-reinhardt/index.html"><i>Aktion Reinhardt</i></a>, the decision to have gas chambers built there was taken only sometime in early 1942, and the methods used were allegedly both <a href="/toxins-chemicals/zyklon-b/index.html">Zyklon B</a> and bottled <a href="/c/carbon-monoxide/index.html">carbon monoxide</a>. There were no exotic methods claimed, such as those at the other Reinhardt camps.
 			</p>
 			<h5>
 				<a id="Dachau" href="/camp/mixed-purpose-camp/dachau/index.html">Dachau</a>
@@ -167,13 +167,13 @@
 					<tr>
 						<td> Treblinka </td>
 						<td> machine guns, mobile gas chamber, stunning gas, vacuum, unslaked lime, hot steam, high voltage, chlorine, ether, death bridge, burned alive </td>
-						<td> <a href="/diesel-exhaust/index.html">Diesel-engine exhaust gas</a> </td>
+						<td> <a href="/d/diesel-exhaust/index.html">Diesel-engine exhaust gas</a> </td>
 					</tr>
 					<tr>
 						<td> Bełżec </td>
 						<td> subterranean murder chamber,<br />
 						unslaked lime, high voltage, vacuum, collapsible gas-chamber floor, suffocation with human excrements </td>
-						<td> <a href="/diesel-exhaust/index.html">Diesel-engine exhaust gas</a> </td>
+						<td> <a href="/d/diesel-exhaust/index.html">Diesel-engine exhaust gas</a> </td>
 					</tr>
 					<tr>
 						<td> Sobibór </td>
@@ -183,7 +183,7 @@
 					<tr>
 						<td> Majdanek </td>
 						<td> <a href="/toxins-chemicals/zyklon-b/index.html">Zyklon B</a> </td>
-						<td> bottled <a href="/carbon-monoxide/index.html">carbon monoxide</a> </td>
+						<td> bottled <a href="/c/carbon-monoxide/index.html">carbon monoxide</a> </td>
 					</tr>
 				</tbody>
 			</table>
